--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Dinner</title>
+	<title>Dinne</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
